@@ -1,3 +1,7 @@
+2003-07-21  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* gui/oprof_start.cpp: allow to de-select a counter
+
 2003-07-21  John Levon  <levon@movementarian.org>
 
 	* gui/oprof_start.cpp:
